--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,8 @@ jobs:
           aws-region: us-east-2
       - name: Copy a file from s3
         run: |
-          aws s3 cp s3://jaslkaur-build-in-s3/nyc_medium.db .
+          aws s3 cp s3://jaslkaur-zipped-dbfiles-github-actions/nyc_medium.zip .
+          unzip nyc_medium.zip
           ls
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
