--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: ecr-repo-github-actions
+          ECR_REPOSITORY: ecr-repo-github-actions-s3
           IMAGE_TAG: latest
         run: |
           ls
