--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,9 @@ jobs:
           aws-region: us-east-2
       - name: Copy a file from s3
         run: |
-          aws s3 cp s3://jaslkaur-zipped-dbfiles-github-actions/nyc_small.zip .
-          unzip nyc_small.zip
+          aws s3 cp s3://jaslkaur-zipped-dbfiles-github-actions/nyc_large.zip .
+          unzip nyc_large.zip
           ls
-          docker rmi -f $(docker images -aq)
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
