--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,9 @@ jobs:
           aws-region: us-east-2
       - name: Copy a file from s3
         run: |
-          aws s3 cp s3://jaslkaur-zipped-dbfiles-github-actions/nyc_large.zip .
-          unzip nyc_large.zip
+          # aws s3 cp s3://jaslkaur-zipped-dbfiles-github-actions/nyc_large.zip .
+          # unzip nyc_large.zip
+          aws s3 cp s3://workload-for-plain-lambda/nyc_large .
           ls
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
